working locally from a laptop

--- a/LLMOwnLaptop.ipynb
+++ b/LLMOwnLaptop.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install huggingface_hub\n",
-    "#!pip install ipywidgets"
+    "# %pip install huggingface_hub\n",
+    "# %pip install --upgrade jupyter ipywidgets"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f5d4a3cf-3aef-48a2-9d9c-c0e6f47b8ae9",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "8de36f22-0e89-4add-9c2b-bbb34c4d9d26",
    "metadata": {},
    "outputs": [
@@ -105,56 +105,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "885204d9-7406-472a-887b-bcd5c467c55d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install `\n",
+    "# !pip install idna\n",
+    "# !pip install urllib3\n",
+    "# !pip install certifi\n",
+    "# !pip install charset-normalizer\n",
+    "# !pip install -U requests\n",
+    "# !pip install torch\n",
+    "# !pip install --no-cache-dir transformers sentencepiece\n",
+    "# !pip install protobuf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "350ebdd8-f694-4453-a991-3ad62fd9f1b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure the current directory is in the Python path\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c19af057-97a1-444c-afd3-fdcd283c934e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: utils in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (1.0.2)\n",
-      "Requirement already satisfied: idna in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (3.10)\n",
-      "Requirement already satisfied: urllib3 in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (2.2.3)\n",
-      "Requirement already satisfied: certifi in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (2024.8.30)\n",
-      "Requirement already satisfied: charset-normalizer in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (3.3.2)\n",
-      "Requirement already satisfied: requests in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (from requests) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (from requests) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (from requests) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages (from requests) (2024.8.30)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install `\n",
-    "!pip install idna\n",
-    "!pip install urllib3\n",
-    "!pip install certifi\n",
-    "!pip install charset-normalizer\n",
-    "!pip install -U requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c19af057-97a1-444c-afd3-fdcd283c934e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'check_connectivity' from 'utils' (/Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages/utils/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m check_connectivity, toggle_wifi\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(check_connectivity())\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'check_connectivity' from 'utils' (/Users/rmian/genai/langchain/venv_langchains/lib/python3.12/site-packages/utils/__init__.py)"
+      "No Network Connectivity (IP Address: 127.0.0.1)\n",
+      "WiFi disabled.\n",
+      "No Network Connectivity (IP Address: 127.0.0.1)\n"
      ]
     }
    ],
    "source": [
     "from utils import check_connectivity, toggle_wifi\n",
+    "# from utils import toggle_wifi\n",
     "import time\n",
     "\n",
     "print(check_connectivity())\n",
@@ -165,14 +163,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba850f47-09e6-4b3d-9042-e4df427b0f09",
+   "execution_count": 9,
+   "id": "7a08cf04-b56b-40be-ab2f-48d6ec05b05c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ping: cannot resolve www.google.com: Unknown host\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ping -c 3 www.google.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ba850f47-09e6-4b3d-9042-e4df427b0f09",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline, AutoModelForSeq2SeqLM\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id, legacy=False)\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(model_id, legacy=False, use_fast=False)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id, legacy=False, use_fast=False)\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(model_id)\n",
     "\n",
     "pipeline = pipeline(\"text2text-generation\", model=model, device=-1, tokenizer=tokenizer, max_length=1000)"
@@ -181,30 +200,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93138286-8497-4730-9da4-3f52390bd380",
+   "id": "8e48c713-be16-4c6f-ab20-ae122a1c8e3a",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "93138286-8497-4730-9da4-3f52390bd380",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': 'Apache Kafka is a popular open source message broker that is used for real-time data streaming and streaming applications. It is a popular choice for companies that need to process large amounts of data quickly and efficiently. Some of the competitors to Apache Kafka include Apache Spark, Apache Kafka Streams, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Streaming, Apache Kafka Streams Stream'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipeline(\"What are competitors to Apache Kafka?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ca79ce5d-2e44-446c-a899-d9ecc4b77caa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': \"No,   I   don't   have   a   sister. \\n\"}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipeline(\"\"\"My name is Mark.\n",
     "I have brothers called David and John and my best friend is Michael.\n",
     "Using only the context above. Do you know if I have a sister?    \n",
     "\"\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01d2b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
